# hydra

./: .dockerignore  .editorconfig  .envrc  .gitattributes  .gitignore  .gitmodules  .hlint.yaml  CHANGELOG.md  CLAUDE.md  CNAME  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Documentation_#2405  README.md  SECURITY.md  SERIALISATION.md  SUPPORT.md  abortDatum.data  always-true.script  autotest.sh  bors.toml  build-ci.sh  cabal.project  cabal.project.freeze  coverage.sh  default.nix  fanout-N28-datum.json  fanout-N28-redeemer.json  fanout-N28-tx.json  fanout-N28-utxo.json  fanout-N47-datum.json  fanout-N47-redeemer.json  fanout-N47-tx.json  fanout-N47-utxo.json  flake.nix  fourmolu.yaml  hie.yaml  hydra-node.example.yaml  index.html  (+10 more)
cardano-api-classy/: README.md  cardano-api-classy.cabal
cardano-api-latest/: README.md  cardano-api-latest.cabal
cardano-api-orphans/: README.md  cardano-api-orphans.cabal
hydra-api/: hydra-api.cabal
hydra-cardano-api/: README.md  hydra-cardano-api.cabal
hydra-chain-observer/: NOTICE  README.md  hydra-chain-observer.cabal
hydra-chain-observer/exe/: Main.hs
hydra-chain-observer/golden/: ChainObservation.json
hydra-chain-observer/test/: Main.hs
hydra-cluster/: NOTICE  README.md  hydra-cluster.cabal  submit.sh
hydra-cluster/bench/: Main.hs  README.md  plot-utxo.sh  plot.sh
hydra-cluster/config/: cardano-node.json  genesis-alonzo.json  genesis-byron.json  genesis-shelley.json  pparams.json  protocol-parameters.json  topology.json
hydra-cluster/datasets/: 1-node.cbor  1-node.json  3-nodes.cbor  3-nodes.json
hydra-cluster/exe/: log-filter.hs  seed-network.hs
hydra-cluster/golden/: RunOptions.json
hydra-cluster/src/: CardanoClient.hs  CardanoCluster.hs  CardanoNode.hs  HydraNode.hs
hydra-cluster/test/: Main.hs
hydra-explorer/: README.md  hydra-explorer.cabal
hydra-explorer/exe/: Main.hs
hydra-explorer/json-schemas/: hydra-explorer-api.yaml
hydra-explorer/test/: Main.hs
hydra-explorer/web/: .env  README.md  hydra-explorer.nix  next.config.mjs  package-lock.json  package.json
hydra-networkversions/: hydra-networkversions.cabal  networks.json
hydra-node/: Model.md  NOTICE  README.md  api-log.yaml  api.json  api.yaml  dump.json  hydra-node.cabal  networks.json
hydra-node/app/: hydra-node.hs
hydra-node/exe/: fire-forget.hs  hydra-node.hs  ping-pong.hs
hydra-node/golden/: AssetName.json  AuthLog.json  CardanoTx.json  ChainState.json  ClientInput SimpleTx.faulty.json  ClientInput SimpleTx.json  DraftCommitTxRequest (Tx BabbageEra).json  DraftCommitTxResponse (Tx BabbageEra).json  Event SimpleTx.json  HeadState SimpleTx.json  HydraNodeLog SimpleTx.json  Message SimpleTx.json  MinimumSized (StateEvent (Tx ConwayEra)).json  Party.json  PubKeyHash.json  ReasonablySized (ClientInput (Tx AlonzoEra)).json  ReasonablySized (ClientInput (Tx BabbageEra)).json  ReasonablySized (ClientInput (Tx ConwayEra)).json  ReasonablySized (ClientInput SimpleTx).json  ReasonablySized (DraftCommitTxRequest (Tx BabbageEra)).json  ReasonablySized (DraftCommitTxRequest (Tx ConwayEra)).json  ReasonablySized (DraftCommitTxRequest SimpleTx).json  ReasonablySized (DraftCommitTxResponse (Tx BabbageEra)).json  ReasonablySized (DraftCommitTxResponse (Tx ConwayEra)).json  ReasonablySized (DraftCommitTxResponse SimpleTx).json  ReasonablySized (HeadState (Tx ConwayEra)).json  ReasonablySized (NodeState (Tx ConwayEra))..json  ReasonablySized (NodeState (Tx ConwayEra)).json  ReasonablySized (ServerOutput (Tx AlonzoEra)).faulty.json  ReasonablySized (ServerOutput (Tx AlonzoEra)).faulty.reencoded.json  ReasonablySized (ServerOutput (Tx AlonzoEra)).json  ReasonablySized (ServerOutput (Tx BabbageEra)).json  ReasonablySized (ServerOutput (Tx ConwayEra)).json  ReasonablySized (ServerOutput SimpleTx).faulty.json  ReasonablySized (ServerOutput SimpleTx).faulty.reencoded.json  ReasonablySized (ServerOutput SimpleTx).json  ReasonablySized (SideLoadSnapshotRequest (Tx ConwayEra)).json  ReasonablySized (SubmitHydraTxRequest (Tx ConwayEra)).json  ReasonablySized (SubmitTxRequest (Tx BabbageEra)).json  ReasonablySized (SubmitTxRequest (Tx ConwayEra)).json  (+30 more)
hydra-node/integration/: IntegrationSpec.hs
hydra-node/json-schemas/: api.yaml  common.yaml  logs.yaml  openapi.yaml
hydra-node/src/: Logging.hs
hydra-node/test/: Main.hs
hydra-plutus/: README.md  aiken.toml  dummyScript.plutus  hydra-plutus.cabal  plutus.json
hydra-plutus-extras/: hydra-plutus-extras.cabal
hydra-plutus-extras/test/: Main.hs
hydra-plutus/scripts/: mDeposit.plutus  mHead.golden  mHead.plutus  vCRS.plutus  vCommit.golden  vCommit.plutus  vDeposit.plutus  vHead.golden  vHead.plutus  vInitial.golden  vInitial.plutus
hydra-plutus/test/: Main.hs  Spec.hs  Test.hs
hydra-plutus/validators/: commit.ak  deposit.ak  head.ak  head_tokens.ak  head_types.ak  initial.ak  util.ak  (+1 more)
hydra-prelude/: LICENSE  hydra-prelude.cabal
hydra-test-utils/: hydra-test-utils.cabal
hydra-tui/: NOTICE  README.md  hydra-tui.cabal
hydra-tx/: NOTICE  hydra-tx.cabal  trusted_setup.json
hydraw/: README.md  bundle.js  hydraw.cabal  index.html
local-cluster/: README.md  genesis.json  local-cluster.cabal  submit.sh  test_submit.sh
merkle-patricia-tree/: CHANGELOG.md  LICENSE  README.md  merkle-patricia-tree.cabal
pixel-painting/: README.md  bundle.js  index.html  pixel-painting.cabal  style.css
plutus-cbor/: .RData  .Rhistory  CHANGELOG.md  LICENSE  README.md  TAGS  bench2.txt  bench2.vec  bench5.crit  bench5.csv  budgets-cheap-appendbytestring  budgets-stepcost-2000-full-builtin-costs  budgets-stepcost-25000  budgets-stepcost-30000  budgets-stepcost-5000-full-builtin-costs  budgets-stepcost-8000-full-builtin-costs  budgets-stepcost-8000-tiny-builtin-costs  budgets2  multi-asset.budgets  output  output-2  plot.r  plutus-cbor.cabal  poc-bms.txt  t.txt  times  tmp  validator-2927
plutus-merkle-tree/: CHANGELOG.md  README.md  plutus-merkle-tree.cabal
typed-protocol-fireforget/: typed-protocol-fireforget.cabal
visualize-logic/: README.md  visualize-logic.cabal
visualize-logs/: Main.hs  visualize-logs.cabal
(+7729 files in other folders)
