cabal-version: 3.0
name:          cardano-api-classy
version:       0.15.0
synopsis:
  Typeclass wrappers for `cardano-api` era and plutus witnesses

author:        IOG
copyright:     2022 IOG
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

source-repository head
  type:     git
  location: https://github.com/cardano-scaling/hydra

common project-config
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    FunctionalDependencies
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedStrings
    PartialTypeSignatures
    PatternSynonyms
    TypeFamilies
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages
    -Wmissing-deriving-strategies -fprint-potential-instances

library
  import:          project-config
  hs-source-dirs:  src
  ghc-options:     -haddock
  exposed-modules:
    Cardano.Api.Class.HasScriptLanguageInEra
    Cardano.Api.Class.IsAllegraEraOnwards
    Cardano.Api.Class.IsAlonzoEraOnwards
    Cardano.Api.Class.IsBabbageEraOnwards
    Cardano.Api.Class.IsMaryEraOnwards
    Cardano.Api.Class.ToAlonzoScript
    Cardano.Api.Classy

  -- NOTE: We only use an upper bound on cardano-api and have the other
  -- dependencies on cardano-ledger* follow.
  build-depends:
    , base                   >=4.16
    , cardano-api            ^>=8.47
    , cardano-ledger-alonzo
    , cardano-ledger-conway
    , cardano-ledger-core
