cabal-version: 3.0
name:          cardano-api-orphans
version:       0.1.0
synopsis:      A Haskell API for Cardano, tailored to the Hydra project.
author:        IOG
copyright:     2025 IOG
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

source-repository head
  type:     git
  location: https://github.com/cardano-scaling/hydra

common project-config
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    FunctionalDependencies
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedStrings
    PartialTypeSignatures
    PatternSynonyms
    TypeFamilies
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages
    -Wmissing-deriving-strategies -fprint-potential-instances
    -Wno-orphans

library
  import:          project-config
  hs-source-dirs:  src
  ghc-options:     -haddock
  exposed-modules:
    Cardano.Api.Orphans
    Cardano.Api.Orphans.NetworkId
    Cardano.Api.Orphans.NetworkMagic
    Cardano.Api.Orphans.TxId

  build-depends:
    , aeson
    , base
    , cardano-api
    , cardano-api:gen
    , cardano-binary
    , hedgehog-quickcheck
    , QuickCheck
    , text
