cabal-version: 3.0
name:          hydra-api
version:       0.9.0
synopsis:      The Hydra Haskell API
author:        IOG
copyright:     2023 IOG
license:       Apache-2.0
data-files:    json-schemas/api.yaml

source-repository head
  type:     git
  location: https://github.com/input-output-hk/hydra

flag hydra-development
  description: Disable -Werror for development
  default:     False
  manual:      True

common project-config
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeSynonymInstances
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints
    -fprint-potential-instances

  if !flag(hydra-development)
    ghc-options: -Werror

library
  import:          project-config
  hs-source-dirs:  src
  exposed-modules:
    Hydra.API.Chain
    Hydra.API.ClientInput
    Hydra.API.ContestationPeriod
    Hydra.API.Crypto
    Hydra.API.Ledger
    Hydra.API.Network
    Hydra.API.Party
    Hydra.API.ServerOutput
    Hydra.API.Snapshot

  build-depends:
    , aeson
    , array
    , base
    , base16-bytestring
    , bech32
    , bech32-th
    , bytestring
    , cardano-binary
    , cardano-crypto-class
    , cborg
    , containers
    , contra-tracer
    , data-default
    , directory
    , filepath
    , formatting
    , generic-random
    , gitrev
    , hedgehog-quickcheck
    , hydra-cardano-api
    , io-classes
    , iproute
    , memory
    , network
    , optparse-applicative
    , prometheus
    , QuickCheck
    , quickcheck-instances
    , req
    , serialise
    , small-steps
    , stm
    , strict-containers
    , text
    , time
    , transformers
    , typed-protocols        >= 0.1 && < 0.2
    , typed-protocols-cborg  >= 0.1 && < 0.2
    , unliftio
    , websockets

  ghc-options:     -haddock
