cabal-version: 3.0
name:          hydra-chain-observer
version:       1.2.0
synopsis:      Hydra Chain Observer
author:        IOG
copyright:     2023 IOG
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

source-repository head
  type:     git
  location: https://github.com/cardano-scaling/hydra

common project-config
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    FunctionalDependencies
    GADTs
    LambdaCase
    MultiWayIf
    NoImplicitPrelude
    OverloadedStrings
    PartialTypeSignatures
    PatternSynonyms
    TypeFamilies
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages
    -fprint-potential-instances -Wmissing-local-signatures

library
  import:          project-config
  hs-source-dirs:  src
  ghc-options:     -haddock
  build-depends:
    , base                         >=4.8.0
    , base16-bytestring
    , blockfrost-client            >=0.11.0.0
    , http-conduit
    , hydra-cardano-api
    , hydra-node
    , hydra-plutus
    , hydra-prelude
    , hydra-tx
    , io-classes
    , network-uri
    , optparse-applicative
    , ouroboros-network-protocols
    , retry

  exposed-modules:
    Hydra.Blockfrost.ChainObserver
    Hydra.ChainObserver
    Hydra.ChainObserver.NodeClient
    Hydra.ChainObserver.Options
    Hydra.Ouroborus.ChainObserver

executable hydra-chain-observer
  import:         project-config
  hs-source-dirs: exe
  main-is:        Main.hs
  build-depends:
    , hydra-chain-observer
    , hydra-prelude

test-suite tests
  import:             project-config
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:     test
  main-is:            Main.hs
  type:               exitcode-stdio-1.0
  build-depends:
    , hspec
    , hspec-golden-aeson
    , hydra-cardano-api
    , hydra-chain-observer
    , hydra-node
    , hydra-prelude
    , hydra-test-utils
    , hydra-tx
    , hydra-tx:testlib
    , QuickCheck

  other-modules:
    Hydra.ChainObserverSpec
    Spec

  build-tool-depends: hspec-discover:hspec-discover
