cabal-version:      3.0
name:               hydra-cluster
version:            0.15.0
synopsis:
  Integration test suite using a local cluster of cardano and hydra nodes

author:             IOG
copyright:          2022 IOG
license:            Apache-2.0
license-files:
  LICENSE
  NOTICE

extra-source-files: README.md
data-files:
  config/credentials/alice.sk
  config/credentials/alice.vk
  config/credentials/bob.sk
  config/credentials/bob.vk
  config/credentials/carol.sk
  config/credentials/carol.vk
  config/credentials/faucet.sk
  config/credentials/faucet.vk
  config/devnet/byron-delegate.key
  config/devnet/byron-delegation.cert
  config/devnet/cardano-node.json
  config/devnet/genesis-alonzo.json
  config/devnet/genesis-byron.json
  config/devnet/genesis-conway.json
  config/devnet/genesis-shelley.json
  config/devnet/kes.skey
  config/devnet/opcert.cert
  config/devnet/vrf.skey
  config/protocol-parameters.json

source-repository head
  type:     git
  location: https://github.com/input-output-hk/hydra

common project-config
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    FunctionalDependencies
    GADTs
    LambdaCase
    MultiWayIf
    NoImplicitPrelude
    OverloadedStrings
    PartialTypeSignatures
    PatternSynonyms
    TypeFamilies
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages
    -fprint-potential-instances

library
  import:          project-config
  hs-source-dirs:  src
  exposed-modules:
    CardanoClient
    CardanoNode
    Hydra.Cluster.Faucet
    Hydra.Cluster.Fixture
    Hydra.Cluster.Options
    Hydra.Cluster.Scenarios
    Hydra.Cluster.Util
    Hydra.Generator
    Hydra.LogFilter
    HydraNode
    Paths_hydra_cluster

  build-depends:
    , aeson
    , async
    , base                                         >=4.7     && <5
    , bytestring
    , cardano-ledger-core
    , cardano-slotting
    , containers
    , contra-tracer
    , data-default
    , directory
    , filepath
    , http-conduit
    , hydra-cardano-api
    , hydra-node
    , hydra-prelude
    , hydra-test-utils
    , io-classes
    , iohk-monitoring
    , lens
    , lens-aeson
    , optparse-applicative
    , plutus-ledger-api:plutus-ledger-api-testlib  >=1.9.1.0
    , process
    , QuickCheck
    , req
    , temporary
    , text
    , time
    , unix
    , websockets

  ghc-options:     -haddock

executable hydra-cluster
  import:             project-config
  hs-source-dirs:     exe/hydra-cluster
  main-is:            Main.hs
  ghc-options:        -threaded -rtsopts
  build-depends:
    , hydra-cluster
    , hydra-node
    , hydra-prelude
    , hydra-test-utils
    , optparse-applicative

  build-tool-depends: hydra-node:hydra-node
  ghc-options:        -threaded -rtsopts

executable log-filter
  import:         project-config
  hs-source-dirs: exe/log-filter
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts
  build-depends:
    , aeson
    , base                  >=4.7 && <5
    , bytestring
    , hydra-cluster
    , hydra-node
    , hydra-prelude
    , optparse-applicative

test-suite tests
  import:             project-config
  hs-source-dirs:     test
  main-is:            Main.hs
  type:               exitcode-stdio-1.0
  other-modules:
    Paths_hydra_cluster
    Spec
    Test.ChainSpec
    Test.CardanoClientSpec
    Test.CardanoNodeSpec
    Test.ChainObserverSpec
    Test.DirectChainSpec
    Test.OfflineChainSpec
    Test.EndToEndSpec
    Test.GeneratorSpec
    Test.Hydra.Cluster.CardanoCliSpec
    Test.Hydra.Cluster.FaucetSpec
    Test.Ledger.Cardano.ConfigurationSpec
    Test.LogFilterSpec

  build-depends:
    , aeson
    , async
    , base               >=4.7 && <5
    , bytestring
    , containers
    , directory
    , filepath
    , hspec
    , hydra-cardano-api
    , hydra-cluster
    , hydra-node
    , hydra-prelude
    , hydra-test-utils
    , io-classes
    , lens
    , lens-aeson
    , process
    , QuickCheck
    , stm
    , text
    , time

  build-tool-depends:
    , hspec-discover:hspec-discover
    , hydra-chain-observer:hydra-chain-observer
    , hydra-node:hydra-node

  ghc-options:        -threaded -rtsopts

benchmark bench-e2e
  import:             project-config
  hs-source-dirs:     bench
  main-is:            Main.hs
  type:               exitcode-stdio-1.0
  other-modules:
    Bench.EndToEnd
    Bench.Options
    Bench.Summary

  build-depends:
    , aeson
    , base                  >=4.7 && <5
    , base16-bytestring
    , bytestring
    , cardano-binary
    , containers
    , directory
    , filepath
    , HUnit
    , hydra-cardano-api
    , hydra-cluster
    , hydra-node
    , hydra-prelude
    , hydra-test-utils
    , io-classes
    , lens
    , lens-aeson
    , optparse-applicative
    , process
    , QuickCheck
    , regex-tdfa
    , scientific
    , statistics
    , time
    , vector

  build-tool-depends: hydra-node:hydra-node
  ghc-options:        -threaded -rtsopts
